--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,11 @@ copyright = "Martin Stoynov"
   url = "/tags/"
 
 [[menu.main]]
+  identifier = "posts"
+  name = "Posts"
+  url = "/posts/"
+
+[[menu.main]]
   identifier = "about"
   name = "About"
   url = "/about/"
